--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,40 +4,29 @@ pipeline {
         maven 'localMaven'
     }
 
+    parameters{
+        string(name: 'tomcat_dev_ip', defaultvalue: '34.243.42.59', description: 'staging server')
+        sring(name: 'tomcat_deploy_ip', defaultvalue: '34.245.233.9', description: 'production server')
+    }
+
+    triggers {
+         pollSCM('* * * * *')
+    }
+
     stages{
-        stage('Build'){
-            steps {
-                sh 'mvn clean package'
-            }
-            post {
-                success {
-                    echo 'Now Archiving...'
-                    archiveArtifacts artifacts: '**/target/*.war'
+        stage ('Deployments'){
+           parallel{
+                stage ('Deploy to Staging'){
+                    steps {
+                        sh "scp -i /home/jenkins/tomcat-demo.pem **/target/*.war ec2-user@${params.tomcat_dev}:/var/lib/tomcat7/webapps"
+                    }
                 }
-            }
-        }
-        stage('Deploy to Staging'){
-            steps {
-                build job:'Deploy-to-staging'
-            }
-        }
-        stage('Deploy to Production'){
-            steps{
-                timeout(time:5, unit:'DAYS'){
-                    input message:'Approve PRODUCTION Deployment?'
-                }
-
-                build job: 'Deploy-to-Prod'
-            }
-            post {
-                success{
-                    echo 'Code deployed to Production'
-                }
-
-                failure{
-                    echo 'Deployment failed'
-                }
-            }
-        }
+                stage ("Deploy to Production"){
+                    steps {
+                        sh "scp -i /home/jenkins/tomcat-demo.pem **/target/*.war ec2-user@${params.tomcat_prod}:/var/lib/tomcat7/webapps"
+                    }
+                 }
+             }
+         }
     }
 }
