--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,12 +18,12 @@ pipeline {
            parallel{
                 stage ('Deploy to Staging'){
                     steps {
-                        sh "scp -i '/Users/paulvancappelle/aws docs/tomcat-demo.pem' **/target/*.war ec2-user@${params.tomcat_dev}:/var/lib/tomcat7/webapps"
+                        sh "scp -i '/Users/paulvancappelle/aws docs/tomcat-demo.pem.txt' **/target/*.war ec2-user@${params.tomcat_dev}:/var/lib/tomcat7/webapps"
                     }
                 }
                 stage ("Deploy to Production"){
                     steps {
-                        sh "scp -i '/Users/paulvancappelle/aws docs/tomcat-demo.pem' **/target/*.war ec2-user@${params.tomcat_prod}:/var/lib/tomcat7/webapps"
+                        sh "scp -i '/Users/paulvancappelle/aws docs/tomcat-demo.pem.txt'dif **/target/*.war ec2-user@${params.tomcat_prod}:/var/lib/tomcat7/webapps"
                     }
                  }
              }
